Community Edition: Repairing code...